--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,70 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.loading {
+  margin-top: 75px;
+  font-size: 150px;
+  color: darkblue;
+  text-align: center;
+
+}
+a {
+  text-decoration: none;
+  color: white;
+  vertical-align: middle;
+}
+a:hover {
+  text-emphasis: none;
+  text-decoration: none;
+  color:white;
+
+}
+.button{
+  border-radius: 25px;
+  font-size: 25px;
+  height: 60px;
+}
+footer{
+  padding-top: 75px;
+}
+.bird {
+  font-size: 10px;
+  padding:0;
+  margin:0;
+}
+.lightblue {
+  background-color: lightblue;
+  padding: 20px;
+  border-radius: 25px;
+}
+@media screen and (max-width: 768){
+  .lightblue {
+    font-size: 25px;
+  }
+}
+.heading{
+  height: 150px;
+  margin-top:0;
+}
+.big-text{
+  font-size: 80px;
+  font-weight: 800;
+  color: darkblue;
+  text-transform: capitalize;
+}
+@media screen and (max-width:768){
+  .big-text{
+    font-size: 35px;
+    font-weight: 600;
+}
+  .quote-text{
+    font-size: 25px;
+  }
+}
+
+.darkblue {
+  color: darkblue;
+}
+.author {
+  font-weight: 600;
+}
