--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,13 @@ code {
   font-size: 150px;
   color: darkblue;
   text-align: center;
+  margin: auto;
 
 }
 a {
   text-decoration: none;
   color: white;
-  vertical-align: middle;
+  line-height: 25px;
 }
 a:hover {
   text-emphasis: none;
@@ -33,48 +34,73 @@ a:hover {
   border-radius: 25px;
   font-size: 25px;
   height: 60px;
+  background-color: darkblue;
+  color: white;
+  padding: 0 25px;
+  margin-top: 10px;
+  width: 100%;
 }
 footer{
   padding-top: 75px;
+  margin: auto;
 }
 .bird {
-  font-size: 10px;
+  font-size: 25px;
   padding:0;
   margin:0;
+  line-height: 25px;
 }
 .lightblue {
   background-color: lightblue;
   padding: 20px;
   border-radius: 25px;
+  
+  width: 60%;
+  margin: auto;
 }
-@media screen and (max-width: 768){
-  .lightblue {
-    font-size: 25px;
-  }
+.quote-text{
+  font-size: 35px;
 }
+
 .heading{
   height: 150px;
-  margin-top:0;
+  margin: 5% auto;
+  width: 90%;
 }
 .big-text{
   font-size: 80px;
-  font-weight: 800;
+  font-weight: bold;
   color: darkblue;
   text-transform: capitalize;
+  text-align: center;
 }
-@media screen and (max-width:768){
-  .big-text{
-    font-size: 35px;
-    font-weight: 600;
+.footer-text{
+  margin: auto;
+  color: darkblue;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 40px;
 }
-  .quote-text{
-    font-size: 25px;
-  }
-}
+ 
+
 
 .darkblue {
   color: darkblue;
 }
 .author {
   font-weight: 600;
+}
+
+@media screen and (max-width:700px){
+  .big-text{
+    font-size: 45px;
+    font-weight: 600;
+}
+.quote-text, button {
+  font-size: 25px;
+
+}
+.lightblue{
+  width: 90%;
+}
 }
