--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,13 @@ code {
   color: darkblue;
   text-align: center;
   margin: auto;
+  justify-content: center;
 
+}
+.spinner-container{
+  margin: auto;
+  width: 100%;
+  display: flex;
 }
 a {
   text-decoration: none;
@@ -60,6 +66,7 @@ footer{
 }
 .quote-text{
   font-size: 35px;
+  text-align: center;
 }
 
 .heading{
@@ -89,6 +96,7 @@ footer{
 }
 .author {
   font-weight: 600;
+  text-align: center;
 }
 
 @media screen and (max-width:700px){
